llvmpipe: fix handling of 0 x 0 framebuffer size

Bump up the size to 1 x 1.  This fixes a number of potential failure
points in the code.

See also http://bugs.freedesktop.org/show_bug.cgi?id=61012